@@ -52,6 +52,16 @@
 
 #if defined(CONFIG_RA_HW_NAT) || defined(CONFIG_RA_HW_NAT_MODULE)
 #include "../nat/hw_nat/ra_nat.h"
+#if !defined(CONFIG_RA_NAT_NONE)                                                                                                            
+extern int (*ra_sw_nat_hook_rx)(struct sk_buff *skb);
+extern int (*ra_sw_nat_hook_tx)(struct sk_buff *skb, int gmac_no);
+#endif
+#endif
+
+#if defined(CONFIG_NETFILTER_XT_MATCH_WEBSTR) || defined(CONFIG_NETFILTER_XT_MATCH_WEBSTR_MODULE)
+#include <linux/tcp.h>
+int web_str_loaded=0;
+EXPORT_SYMBOL_GPL(web_str_loaded);
 #endif
 
 #include <net/netfilter/nf_conntrack.h>
@@ -1226,16 +1236,51 @@ nf_conntrack_in(int pf, unsigned int hooknum, struct sk_buff **pskb)
 	}
 #endif
 
+/* This code section may be used for skip some types traffic */
+#if defined(CONFIG_RA_HW_NAT) || defined(CONFIG_RA_HW_NAT_MODULE) || defined(CONFIG_BCM_NAT) || defined(CONFIG_BCM_NAT_MODULE)
+	if ((pf == PF_INET && protonum == IPPROTO_TCP ) 
+#if  defined(CONFIG_RA_HW_NAT) || defined(CONFIG_RA_HW_NAT_MODULE)
+	    || (ra_sw_nat_hook_rx && ra_sw_nat_hook_tx)
+#endif
+#if defined(CONFIG_BCM_NAT) || defined(CONFIG_BCM_NAT_MODULE)
+	    || (ipv4_conntrack_fastnat && bcm_nat_bind_hook)
+#endif
+	) {
+#if defined(CONFIG_NETFILTER_XT_MATCH_WEBSTR) || defined(CONFIG_NETFILTER_XT_MATCH_WEBSTR_MODULE)
+	    /* skip form nat offloaf http post/get/head */
+	    if (web_str_loaded) {
+		struct tcphdr _tcph, *tcph;
+		unsigned char _data[2], *data;
+
+		/* For URL filter; RFC-HTTP: GET, POST, HEAD */
+		if ((tcph = skb_header_pointer(*pskb, dataoff, sizeof(_tcph), &_tcph)) &&
+		    (data = skb_header_pointer(*pskb, dataoff + tcph->doff*4, sizeof(_data), &_data)) &&
+		    ((data[0] == 'G' && data[1] == 'E') ||
+		     (data[0] == 'P' && data[1] == 'O') ||
+		     (data[0] == 'H' && data[1] == 'E'))) {
+			nat->info.nat_type |= NF_FAST_NAT_DENY;
+#if  defined(CONFIG_RA_HW_NAT) || defined(CONFIG_RA_HW_NAT_MODULE)
+			goto skip_hw;
+#else
+			goto skip_sw;
+#endif
+		}
+	    }
+#endif /* XT_MATCH_WEBSTR */
+		/* Other traffic skip section
+		    .........
+		    .........
+		    .........
+		*/
+	}
+#endif /* RA_HW_NAT || BCM_NAT */
+/* end skip section */
+
 #if defined(CONFIG_BCM_NAT) || defined(CONFIG_BCM_NAT_MODULE)
         if (ipv4_conntrack_fastnat && bcm_nat_bind_hook && pf == PF_INET) {
 		/* if need helper or nat type unknown/fast deny need skip packets */
         	if (is_helper || !nat || (nat->info.nat_type & NF_FAST_NAT_DENY))
-		    goto skip;
-
-		/* To do this code section may be used for skip some types traffic 
-		    ....
-		    ....
-		*/
+		    goto skip_sw;
 
 		/* Try send selected pakets to bcm_nat */
 		if ((ctinfo == IP_CT_ESTABLISHED || ctinfo == IP_CT_IS_REPLY)
@@ -1253,7 +1298,7 @@ nf_conntrack_in(int pf, unsigned int hooknum, struct sk_buff **pskb)
 		}
 	    }
 	}
-skip:
+skip_sw:
 #endif
 
 #if  defined(CONFIG_RA_HW_NAT) || defined(CONFIG_RA_HW_NAT_MODULE)
@@ -1262,6 +1307,7 @@ skip:
                     FOE_ALG(*pskb)=1;
 	    }
 	}
+skip_hw:
 #endif
 
 	if (set_reply && !test_and_set_bit(IPS_SEEN_REPLY_BIT, &ct->status)) {
